--- a/prct03/src/latex-src.tex
+++ b/prct03/src/latex-src.tex
@@ -50,6 +50,14 @@
      21(9), 768-775.
      (1995)
   \end{thebibliography}
- 
+ \bigskip
+ \begin{tabular}{|l|c|c|}
+ \hline
+   nombre & edad & nota \\ \hline
+   pepe   & 24   & 10   \\ \hline
+   juan   & 19   & 8    \\ \hline
+   Luis   & 21   & 9    \\ \hline
+ \end{tabular}
+
 
 \end{document}
